--- a/src/css/utilities/layout.css
+++ b/src/css/utilities/layout.css
@@ -78,6 +78,7 @@
     flex-grow: 1;
     overflow-y: auto;
     overflow-x: hidden;
+    margin-bottom: -2em;
     padding-top: 1em;
     z-index: 1;
   }
