--- a/src/css/untangled-ui-guide.css
+++ b/src/css/untangled-ui-guide.css
@@ -200,7 +200,9 @@
 
 .ui-part__content {
   height: calc(100vh - var(--height-toolbar));
+  margin-top: -1em;
   overflow: scroll;
+  padding-top: 1em;
 }
 
 /* stylelint-enable */
