--- a/src/css/settings/typography.css
+++ b/src/css/settings/typography.css
@@ -44,6 +44,44 @@
   --lineHeight-page: 1;
   --lineHeight-paragraph: 1.4;
   --lineHeight-heading: 1.3;
+
+  --fluidFontSize--1: {
+    font-size: var(--fontSize--0)rem;
+    @media (--md-up) { font-size: var(--fluidFont--1); }
+    @media (--xl-up) { font-size: var(--fontSize--2)rem; }
+  };
+
+  --fluidFontSize--2: {
+    font-size: var(--fontSize--1)rem;
+    @media (--md-up) { font-size: var(--fluidFont--2); }
+    @media (--xl-up) { font-size: var(--fontSize--3)rem; }
+  };
+
+  --fluidFontSize--3: {
+    font-size: var(--fontSize--2)rem;
+    @media (--md-up) { font-size: var(--fluidFont--3); }
+    @media (--xl-up) { font-size: var(--fontSize--4)rem; }
+  };
+
+  --fluidFontSize--4: {
+    font-size: var(--fontSize--3)rem;
+    @media (--md-up) { font-size: var(--fluidFont--4); }
+    @media (--xl-up) { font-size: var(--fontSize--5)rem; }
+  };
+
+  --fluidFontSize--5: {
+    font-size: var(--fontSize--4)rem;
+    @media (--md-up) { font-size: var(--fluidFont--5); }
+    @media (--xl-up) { font-size: var(--fontSize--6)rem; }
+  };
+
+
+  --fluidFontSize--6: {
+    font-size: var(--fontSize--5)rem;
+    @media (--md-up) { font-size: var(--fluidFont--6); }
+    @media (--xl-up) { font-size: var(--fontSize--7)rem; }
+  };
+
   --no-bullet: {
     list-style-image: none;
     list-style-type: none;
@@ -105,18 +143,18 @@
 }
 
 
-/* latin 700 */
+/* latin 500 */
 @font-face {
   font-display: swap;
   font-family: "Source Sans Pro";
   font-style: normal;
-  font-weight: 700;
+  font-weight: 500;
   src:
-  local("Source Sans Pro Bold"),
-  local("SourceSansPro-Bold"),
-  url("../fonts/source-sans-pro/toadOcfmlt9b38dHJxOBGJkF8H8ye47wsfpWywda8og.woff2")
+  local("Source Sans Pro Semibold"),
+  local("SourceSansPro-Semibold"),
+  url("../fonts/source-sans-pro/toadOcfmlt9b38dHJxOBGCZ8NoerKyav4zUUjNuaO6H9W8FSyuuLYqUQNBHcdhNL9enF3Ej46HTvXZ5.woff2")
   format("woff2"),
-  url("../fonts/source-sans-pro/toadOcfmlt9b38dHJxOBGJkF8H8ye47wsfpWywda8og.woff")
+  url("../fonts/source-sans-pro/toadOcfmlt9b38dHJxOBGCZ8NoerKyav4zUUjNuaO6H9W8FSyuuLYqUQNBHcdhNL9enF3Ej46HTvXZ5.woff")
   format("woff");
   unicode-range:
     U+0000-00FF,
