--- a/src/css/components/dialog.css
+++ b/src/css/components/dialog.css
@@ -22,54 +22,55 @@
   }
 }
 
+.c-dialog__card {
+  background-color: var(--color-dialog--primary);
+  border-radius: var(--radius-dialog);
+  box-shadow: var(--shadow-2);
+  margin: var(--margin-dialog__card, 1em 1rem);
+  min-height: var(--height-dialog__card, 100px);
+  min-width: var(--width-dialog__card, 280px);
+  pointer-events: auto;
+  position: relative;
 
-  .c-dialog__card {
-    background-color: var(--color-dialog--primary);
-    border-radius: var(--radius-dialog);
-    box-shadow: var(--shadow-2);
-    margin: var(--margin-dialog__card, 1em 1rem);
-    min-height: var(--height-dialog__card, 100px);
-    min-width: var(--width-dialog__card, 280px);
-    pointer-events: auto;
-    position: relative;
+  .t-dark &,
+  .t-fullscreen &,
+  :--fullscreen & {
+    background-color: var(--color-dialog-dark--primary);
+  }
+}
 
-    .t-dark &,
-    .t-fullscreen &,
-    :--fullscreen & {
-      background-color: var(--color-dialog-dark--primary);
-    }
+.c-dialog__title {
+  font-size: var(--fontSize-dialog__title);
+  padding: var(--padding-dialog__title, 1em 1rem 0.85em);
+}
+
+.c-dialog__content {
+  max-height: var(--height-dialog__content, 82vh);
+  overflow-y: auto;
+  padding: var(--padding-dialog__content, 0.85em 1rem 1em);
+
+  &:first-child {
+    padding-top: 1.25em;
   }
 
-  .c-dialog__title {
-    font-size: var(--fontSize-dialog__title);
-    padding: var(--padding-dialog__title, 1em 1rem .85em);
+  .c-dialog__title + & {
+    padding-top: 0;
   }
+}
 
+.c-dialog__content--bordered {
+  border-bottom: 1px solid var(--color-dialog__divider);
+  border-top: 1px solid var(--color-dialog__divider);
+}
 
-  .c-dialog__content {
-    max-height: var(--height-dialog__content, 82vh);
-    overflow-y: scroll;
-    padding: var(--padding-dialog__content, .85em 1rem 1em);
+.c-dialog__content--collapse {
+  padding: var(--padding-dialog__content--collapse, 0 0 0.5em);
+}
 
-    &:first-child { padding-top: 1.25em; }
-
-    .c-dialog__title + & { padding-top: 0; }
-  }
-
-  .c-dialog__content--bordered {
-    border-bottom: 1px solid var(--color-dialog__divider);
-    border-top: 1px solid var(--color-dialog__divider);
-  }
-
-  .c-dialog__content--collapse {
-    padding: var(--padding-dialog__content--collapse, 0 0 .5em);
-  }
-
-
-  .c-dialog__actions {
-    @apply --end;
-    padding-left: var(--paddingLeft-dialog__actions, .5rem);
-  }
+.c-dialog__actions {
+  @apply --end;
+  padding-left: var(--paddingLeft-dialog__actions, 0.5rem);
+}
 
 /* TODO Make all buttons stack to the right
   .c-dialog__actions--stacked {
@@ -77,10 +78,6 @@
     }
   }
 */
-
-
-
-
 
 .c-dialog--fullscreen {
   @apply --fade-in;
@@ -94,4 +91,3 @@
     width: 100%;
   }
 }
-
