--- a/src/css/components/backdrop.css
+++ b/src/css/components/backdrop.css
@@ -1,13 +1,16 @@
 .c-backdrop {
-  @apply --fade-out;
-  @apply --position-full;
-  background-color: var(--color-backdrop);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1 !important;
   position: fixed;
-  z-index: var(--zIndex-backdrop) !important;
+  background-color: var(--color-backdrop);
 
-  &:--active {
-    @apply --fade-in;
-    z-index: -1 !important;
+  &.is-active {
+    opacity: 1;
+    will-change: opacity;
+    transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   }
 
   &:--disabled {
